--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <style>
 body {
   margin: 0;
-  background: #020617;
-  font-family: 'Segoe UI', sans-serif;
-  color: #e5e7eb;
+  font-family: Arial, sans-serif;
+  background: linear-gradient(180deg, #f6efe9, #e9ddd2);
+  color: #2c2c2c;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -18,13 +18,13 @@ body {
 
 .container {
   width: 90%;
-  max-width: 700px;
+  max-width: 720px;
   text-align: center;
 }
 
-img {
+video, img {
   width: 100%;
-  max-height: 360px;
+  max-height: 380px;
   object-fit: cover;
   border-radius: 14px;
   margin-bottom: 20px;
@@ -33,7 +33,7 @@ img {
 #message {
   font-size: 15px;
   line-height: 1.7;
-  opacity: 0.95;
+  margin-bottom: 20px;
 }
 
 #question {
@@ -45,19 +45,17 @@ textarea {
   width: 100%;
   height: 140px;
   padding: 14px;
-  background: #020617;
-  border: 1px solid #334155;
-  color: #e5e7eb;
   border-radius: 10px;
+  border: 1px solid #c7bfb7;
   font-size: 14px;
   resize: none;
 }
 
 button {
-  margin-top: 22px;
+  margin-top: 20px;
   width: 100%;
   padding: 12px;
-  background: #1d4ed8;
+  background: #b56b5f;
   border: none;
   border-radius: 10px;
   color: white;
@@ -66,11 +64,11 @@ button {
 }
 
 button:hover {
-  background: #2563eb;
+  background: #a25a4f;
 }
 
 .final-love {
-  color: red;
+  color: #a12727;
   font-size: 28px;
   font-weight: bold;
   margin-top: 20px;
@@ -82,28 +80,31 @@ button:hover {
 
 <div class="container" id="screen">
 
-  <!-- OPENING -->
-  <img src="./us.jpeg" alt="us">
+  <!-- OPENING VIDEO -->
+  <video controls>
+    <source src="opening.mp4" type="video/mp4">
+    Your browser does not support the video.
+  </video>
 
+  <!-- OPENING MESSAGE -->
   <div id="message">
     This is for you.<br><br>
+
     Even though I am flawed.<br>
     Even though I hurt you sometimes by miscommunicating.<br>
     Even though I make you feel misunderstood, unseen, or sad at times.<br>
     Even though we fight.<br><br>
+
     I am aware of it.<br>
     I am willing to change.<br>
     I want to hold on to you and to us.<br><br>
+
     I love you. Always.
   </div>
 
   <button onclick="start()">Continue</button>
 
 </div>
-
-<audio id="bgm" loop>
-  <source src="./dooriyaan.mp3" type="audio/mpeg">
-</audio>
 
 <script>
 const questions = [
@@ -124,7 +125,6 @@ const questions = [
 let i = 0;
 
 function start() {
-  document.getElementById("bgm").play();
   document.getElementById("screen").innerHTML = `
     <h1 id="question"></h1>
     <textarea placeholder="Write here..."></textarea>
@@ -144,7 +144,7 @@ function next() {
     document.querySelector("textarea").value = "";
   } else {
     document.getElementById("screen").innerHTML = `
-      <img src="./us.jpeg">
+      <img src="us.jpeg">
       <div class="final-love">I love you.</div>
     `;
   }
